package org.example.Practica1;

import java.time.LocalDate;

public class Invitado {

    // Creacion de atributos
    private String nombre;
    private String profesion;
    private LocalDate fecha_visita;
    private int temporada;

    // Constructor
    public Invitado(String nombre, String profesion, int temporada, LocalDate fechaVisita) {
        this.nombre = nombre;
        this.profesion = profesion;
        this.temporada = temporada;
        this.fecha_visita = fechaVisita;
    }

    // Metodos getter y setter
    public int getTemporada() {
        return temporada;
    }

    public void setTemporada(int temporada) {
        this.temporada = temporada;
    }

    public LocalDate getFecha_visita() {
        return fecha_visita;
    }

    public void setFecha_visita(LocalDate fecha_visita) {
        this.fecha_visita = fecha_visita;
    }

    public String getProfesion() {
        return profesion;
    }

    public void setProfesion(String profesion) {
        this.profesion = profesion;
    }

    public String getNombre() {
        return nombre;
    }

    public void setNombre(String nombre) {
        this.nombre = nombre;
    }

    // Metodo toString
    @Override
    public String toString() {
        return "Invitado{" +
                "nombre='" + nombre + '\'' +
                ", profesion='" + profesion + '\'' +
                ", fecha_visita=" + fecha_visita +
                ", temporada=" + temporada +
                '}'; // Devuelve una cadena con la información del invitado
    }

    // Devolver la fecha de visita como cadena
    public String getFechaVisita() {
        return fecha_visita.toString();
    }

}
